apply plugin: 'java'
apply plugin: 'scala'
apply plugin: 'groovy'

sourceCompatibility = 1.8
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {

	// groovy
	compile 'org.codehaus.groovy:groovy:2.4.5'
	testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'

	// scala
	compile 'org.scala-lang:scala-library:2.11.7'
	compile 'org.scala-lang:scala-reflect:2.11.7'
	testCompile 'org.scalatest:scalatest_2.11:2.2.5'

	//logging
	compile 'ch.qos.logback:logback-classic:1.1.3'

	// java
	testCompile 'junit:junit:4.12'

}

tasks.withType(ScalaCompile) {
    configure(scalaCompileOptions.forkOptions) {
        memoryMaximumSize = '1g'
        jvmArgs = ['-XX:MaxPermSize=512m']
    }
}